# planner

./: .gitignore  Makefile  Makefile.am  README  TODO  autogen.sh  configure.ac  estimator.cpp  estimator.hpp  plan.cpp  plan.hpp  plan_trip.cpp  plan_trip.sln  plan_trip.vcxproj  planner.cpp  planner.hpp  planner_bf.cpp  planner_bf.hpp  sequence.cpp  sequence.hpp  tariff.cpp  tariff.hpp  test.cpp  types.hpp  utils.cpp  utils.hpp
data/: plan1.json  tariffs.json
io/: plan.cpp  plan.hpp  tariff.cpp  tariff.hpp
planner/: all.hpp  bf.cpp  bf.hpp
