AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = -I m4

SOURCES = \
	estimator.cpp \
	estimator.hpp \
	plan.cpp \
	plan.hpp \
	planner.hpp \
	sequence.cpp \
	sequence.hpp \
	tariff.cpp \
	tariff.hpp \
	types.hpp \
	utils.cpp \
	utils.hpp \
	io/plan.hpp \
	io/plan.cpp \
	io/tariff.hpp \
	io/tariff.cpp \
	planner/all.hpp \
	planner/bf.cpp \
	planner/bf.hpp \
	plan_trip.cpp

bin_PROGRAMS = plan_trip

plan_trip_SOURCES = $(SOURCES)
